hphp/test/quick/FPassC.php.expectf
6

Fatal error: Cannot pass parameter 1 by reference in %s on line 9
